configs: defconfig: disable BMU
Disable the BMU (Battery Management Unit) in the default configuration
to prevent potential issues with power management on supported devices.

Signed-off-by: Feng Zhang <feng@radxa.com>

--- a/configs/sun55iw3p1_defconfig
+++ b/configs/sun55iw3p1_defconfig
@@ -29,9 +29,9 @@ CONFIG_SUNXI_POWER=y
 CONFIG_SUNXI_UBOOT_POWER_OFF=y
 
 CONFIG_SUNXI_PMU=y
-CONFIG_SUNXI_BMU=y
+# CONFIG_SUNXI_BMU is not set
 CONFIG_SUNXI_PMU_EXT=y
-CONFIG_SUNXI_BMU_EXT=y
+# CONFIG_SUNXI_BMU_EXT is not set
 CONFIG_AXP81X_POWER=y
 CONFIG_AXP81X_SUNXI_I2C_SLAVE=0x34
 CONFIG_AXP858_POWER=y
